--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "npm-check-updates": "^16.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-responsive": "^9.0.0-beta.10",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
